--- a/calculadora.html
+++ b/calculadora.html
@@ -213,7 +213,7 @@
                 }
 
             </script>
-
+        </section>
 
             <footer>
                 <p>&copy; 2024 Igor Molena. Todos os direitos reservados.</p>
