--- a/regrasdacasa.html
+++ b/regrasdacasa.html
@@ -69,6 +69,12 @@
             <p><b>Não fornecemos roupa de cama,  toalhas e utensilios de higiene pessoal,</b> afim de evitar qualquer reclamação referente à qualidade dos serviço de estadia prestado e possívevis questões alergicas dos locatários e seus convidados.</p>
             <p><b>Espaços Externos:</b> Desfrute de nossa área externa, com <strong>piscina, churrasqueira e área social com pergolado.</strong></p>
             <h2>4. Cuidados e Segurança</h2>
+            <p><b>Portão:</b>Para sua segurança, durante a estadia, o portão automático de garagem deverá <strong>permanecer fechado, sendo aberto apenas para ocasiões específicas (entrada e saída de veículos, entrada e saída de pessoas portadoras de necessidades específicas, compras em grande volume e peso).</strong></p>p>
+            <p></p>O acesso de emtrada e saída de pessoas em pleno vigor, deverá ser reaizado pelo portão social.</p>
+            <h2>5. Alarme, cerca elétrica e monitoramento</h2>
+            <p><b>Alarme:</b> O imóvel possui sistema de alarme monitorado por empresa de segurança.</p>
+            <p><b>Cerca elétrica:</b> A cerca elétrica está presente por todo o entorno do imóvel.</p>p>
+            <><b>Monitoramento:</b> Câmeras de segurança em funcionamento, instaladas em pontos estratégicos do imóvel, eliminando qualquer ponto cego, com visão priorizada para a entrada e alto dos muros.</p>
             <p><b>Silêncio e Respeito:</b> Lembramos que nossa casa está em uma área residencial. Por isso, pedimos que mantenham o respeito pelos vizinhos, evitando ruídos altos, principalmente à noite.</p>
             <p><b>Uso da Piscina:</b> Utilize a piscina com segurança. Crianças devem ser supervisionadas por um adulto em todos os momentos.
             <p><b>Itens da Casa:</b> Por favor, cuide dos itens e móveis. Em caso de dano, pedimos que nos informe o mais breve possível.</p>
