--- a/regrasdacasa.html
+++ b/regrasdacasa.html
@@ -54,8 +54,8 @@
             <p>Agradecemos por considerar nosso espaço para sua estadia. Este guia foi preparado para ajudar você a conhecer as principais informações e orientações sobre o funcionamento da nossa casa, bem como para esclarecer as principais dúvidas dos hóspedes.</p>
 
             <h2>1. Reservas e Políticas</h2>
-            <p><b>Processo de Reserva:</b> As reservas podem ser feitas diretamente através do site ou pelo nosso número de contato.</p>
-            <p><b>Pagamento:</b> Requeremos um depósito de segurança e 30% do valor total da estadia para confirmar a reserva. O restante deverá ser quitado até a data do check-in.</p>
+            <p><b>Processo de Reserva:</b> As reservas podem ser feitas diretamente pelo nosso número de contato ou e-mail.</p>
+            <p><b>Pagamento:</b> Requeremos um depósito de segurança de 30% do valor total da estadia para confirmar a reserva. O restante deverá ser quitado até a data do check-in.</p>
             <p><b>Cancelamento:</b> Cancelamentos solicitados sem as regras previstas em contrato, não serão perdidos, porém ficarão retidos até que seja escolhida nova data disponível para a locação, com correção de valores para mais ou para menos, seguindo as regras de alta temporada, baixa temporada, finais de semana, feriados nacionais e/ou datas especiais.</p>
             <h2>2. Regras da Casa</h2>
             <p><b>Horário de Check-in e Check-out:</b> O check-in é a partir das 16:00 e o check-out deve ser realizado até às 18:00.</p>
@@ -69,7 +69,7 @@
             <p><b>Não fornecemos roupa de cama,  toalhas e utensilios de higiene pessoal,</b> afim de evitar qualquer reclamação referente à qualidade dos serviço de estadia prestado e possívevis questões alergicas dos locatários e seus convidados.</p>
             <p><b>Espaços Externos:</b> Desfrute de nossa área externa, com <strong>piscina, churrasqueira e área social com pergolado.</strong></p>
             <h2>4. Cuidados e Segurança</h2>
-            <p><b>Portão:</b>Para sua segurança, durante a estadia, o portão automático de garagem deverá <strong>permanecer fechado, sendo aberto apenas para ocasiões específicas (entrada e saída de veículos, entrada e saída de pessoas portadoras de necessidades específicas, compras em grande volume e peso).</strong></p>p>
+            <p><b>Portão:</b> Para sua segurança, durante a estadia, o portão automático de garagem deverá <strong>permanecer fechado</strong>, sendo aberto apenas para ocasiões específicas (entrada e saída de veículos, entrada e saída de pessoas portadoras de necessidades específicas, compras em grande volume e peso).</strong></p>p>
             <p></p>O acesso de emtrada e saída de pessoas em pleno vigor, deverá ser reaizado pelo portão social.</p>
             <h2>5. Alarme, cerca elétrica e monitoramento</h2>
             <p><b>Alarme:</b> O imóvel possui sistema de alarme monitorado por empresa de segurança.</p>
