--- a/regrasdacasa.html
+++ b/regrasdacasa.html
@@ -69,7 +69,7 @@
             <p><b>Não fornecemos roupa de cama,  toalhas e utensilios de higiene pessoal,</b> afim de evitar qualquer reclamação referente à qualidade dos serviço de estadia prestado e possívevis questões alergicas dos locatários e seus convidados.</p>
             <p><b>Espaços Externos:</b> Desfrute de nossa área externa, com <strong>piscina, churrasqueira e área social com pergolado.</strong></p>
             <h2>4. Cuidados e Segurança</h2>
-            <p><b>Portão:</b> Para sua segurança, durante a estadia, o portão automático de garagem deverá <strong>permanecer fechado</strong>, sendo aberto apenas para ocasiões específicas (entrada e saída de veículos, entrada e saída de pessoas portadoras de necessidades específicas, compras em grande volume e peso).</strong></p>p>
+            <p><b>Portão:</b> Para sua segurança, durante a estadia, o portão automático de garagem deverá <strong>permanecer fechado</strong>, sendo aberto apenas para ocasiões específicas (entrada e saída de veículos, entrada e saída de pessoas portadoras de necessidades específicas, compras em grande volume e peso).</p>
             <p></p>O acesso de emtrada e saída de pessoas em pleno vigor, deverá ser reaizado pelo portão social.</p>
             <h2>5. Alarme, cerca elétrica e monitoramento</h2>
             <p><b>Alarme:</b> O imóvel possui sistema de alarme monitorado por empresa de segurança.</p>
