--- a/regrasdacasa.html
+++ b/regrasdacasa.html
@@ -74,7 +74,7 @@
             <h2>5. Alarme, cerca elétrica e monitoramento</h2>
             <p><b>Alarme:</b> O imóvel possui sistema de alarme monitorado por empresa de segurança.</p>
             <p><b>Cerca elétrica:</b> A cerca elétrica está presente por todo o entorno do imóvel.</p>p>
-            <><b>Monitoramento:</b> Câmeras de segurança em funcionamento, instaladas em pontos estratégicos do imóvel, eliminando qualquer ponto cego, com visão priorizada para a entrada e alto dos muros.</p>
+            <p><b>Monitoramento:</b> Câmeras de segurança em funcionamento, instaladas em pontos estratégicos do imóvel, eliminando qualquer ponto cego, com visão priorizada para a entrada e alto dos muros.</p>
             <p><b>Silêncio e Respeito:</b> Lembramos que nossa casa está em uma área residencial. Por isso, pedimos que mantenham o respeito pelos vizinhos, evitando ruídos altos, principalmente à noite.</p>
             <p><b>Uso da Piscina:</b> Utilize a piscina com segurança. Crianças devem ser supervisionadas por um adulto em todos os momentos.
             <p><b>Itens da Casa:</b> Por favor, cuide dos itens e móveis. Em caso de dano, pedimos que nos informe o mais breve possível.</p>
