--- a/index.html
+++ b/index.html
@@ -11,50 +11,43 @@
     </head>
     <body>
 
-       <div class="menu-container">
-    <div class="menu-btn" onclick="toggleMenu()">
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
-
-    <nav class="menu">
-        <ul>
-            <li>INICIO</li>
-            <li>MONGAGUÁ</li>
-            <li onclick="openSubmenu('galeria')">GALERIA</li>
-            <li onclick="openSubmenu('alugue')">ALUGUE</li>
-            <li onclick="openSubmenu('como-chegar')">COMO CHEGAR</li>
-            <li>REGRAS DA CASA</li>
-            <li>COMENTE</li>
-        </ul>
-    </nav>
-
-    <!-- Submenus -->
-    <div id="galeria" class="submenu">
-        <div class="back-btn" onclick="goBack()">Voltar</div>
-        <ul>
-            <li>FOTOS</li>
-            <li>VIDEOS</li>
-        </ul>
-    </div>
-
-    <div id="alugue" class="submenu">
-        <div class="back-btn" onclick="goBack()">Voltar</div>
-        <ul>
-            <li>AGENDA</li>
-            <li>PREÇOS</li>
-        </ul>
-    </div>
-
-    <div id="como-chegar" class="submenu">
-        <div class="back-btn" onclick="goBack()">Voltar</div>
-        <ul>
-            <li>GOOGLE MAPS</li>
-            <li>WAZE</li>
-        </ul>
-    </div>
-</div>
+        <header>
+            <label>CASA FRENTE MAR DO IGOR</label>
+            <nav>
+                <button class="hamburger" onclick="toggleMenu()">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </button>
+                <ul class="menu">
+                    <li><a href="index.html">INÍCIO</a></li>
+                    <li><a href="mongagua.html">MONGAGUÁ</a></li>
+                    <li>
+                        <a href="#">GALERIA</a>
+                        <ul class="submenu">
+                            <li><a href="fotos.html">FOTOS</a></li>
+                            <li><a href="videos.html">VÍDEOS</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">ALUGUE</a>
+                        <ul class="submenu">
+                            <li><a href="agenda.html">AGENDA</a></li>
+                            <li><a href="calculadora.html">PREÇOS</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">COMO CHEGAR</a>
+                        <ul class="submenu">
+                            <li><a href="googlemaps.html">MAPS</a></li>
+                            <li><a href="waze.html">WAZE</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="regrasdacasa.html">REGRAS DA CASA</a></li>
+                    <li><a href="comente.html">COMENTE</a></li> <!-- nao esquecer que sera feito em php -->
+                </ul>
+            </nav>
+        </header>
         <h3>Bem vindo à CASA FRENTE MAR do Igor!</h3>
         <h4>A melhor casa de veraneiro do litoral sul de São Paulo!</h4>
         <section class="slideshow">
