Atualizar o agenda.html
alimentação agenda

--- a/agenda.html
+++ b/agenda.html
@@ -115,6 +115,11 @@
                 <th>Status</th>
                 <th>Informações</th>
             </tr>
+  <tr>
+                        <td>10/01 a 12/01</td>
+                        <td class="reservado">RESERVADO</td>
+                        <td>Amanda</td>
+                    </tr>
             <tr>
                 <td>17/01 a 19/01</td>
                 <td class="reservado">Reservado</td>
