Atualizar o agenda.html

--- a/agenda.html
+++ b/agenda.html
@@ -117,7 +117,7 @@
             </tr>
   <tr>
                         <td>10/01 a 12/01</td>
-                        <td class="reservado">RESERVADO</td>
+                        <td class="reservado">Reservado</td>
                         <td>Amanda</td>
                     </tr>
             <tr>
