Atualizar o agenda.html

--- a/agenda.html
+++ b/agenda.html
@@ -56,9 +56,9 @@
                 </div>
             </div>
         </header>
-
+<section class="text-section">
         <h1>DATAS AGENDADAS</h1>
-
+</section>
 
         <section id="agenda">
         </table>
